seat price function added

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     of which some are strangers, some friends and some strangers yet to be friends. There are stops at
                     intervals and people board in.</p>
 
-                <a href="#bus-section" class="btn-primary my-5 ">Buy Ticket </a>
+                <a href="#bus-section" class="btn-primary2 my-5 ">Buy Ticket </a>
             </div>
         </header>
 
@@ -198,46 +198,46 @@
                         <div class="flex gap-20">
                             <!-- left set -->
                             <div class="flex gap-8 my-5">
-                                <div class="text-left p-4 ">
+                                <div class="text-left ">
                                     <div class="grid grid-rows-10 grid-flow-col ">
-                                        <div class="my-10">A</div>
-                                        <div class="my-10">B</div>
-                                        <div class="my-10">C</div>
-                                        <div class="my-10">D</div>
-                                        <div class="my-10">E</div>
-                                        <div class="my-10">F</div>
-                                        <div class="my-10">G</div>
-                                        <div class="my-10">H</div>
-                                        <div class="my-10">I</div>
-                                        <div class="my-10">J</div>
+                                        <div class="my-5">A</div>
+                                        <div class="my-5">B</div>
+                                        <div class="my-5">C</div>
+                                        <div class="my-5">D</div>
+                                        <div class="my-5">E</div>
+                                        <div class="my-5">F</div>
+                                        <div class="my-5">G</div>
+                                        <div class="my-5">H</div>
+                                        <div class="my-5">I</div>
+                                        <div class="my-5">J</div>
                                     </div>
                                 </div>
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <div id="A1" class="btn-set ">A1</div>
-                                        <div id="B1" class="btn-set ">B1</div>
-                                        <div id="C1" class="btn-set ">C1</div>
-                                        <div id="D1" class="btn-set ">D1</div>
-                                        <div id="E1" class="btn-set ">E1</div>
-                                        <div id="F1" class="btn-set ">F1</div>
-                                        <div id="G1" class="btn-set ">G1</div>
-                                        <div id="H1" class="btn-set ">H1</div>
-                                        <div id="I1" class="btn-set ">I1</div>
-                                        <div id="J1" class="btn-set ">J1</div>
+                                        <button id="A1" class="btn btn-primary bg-gray-200 border-0">A1</button>
+                                        <button id="B1" class="btn btn-primary bg-gray-200 border-0">B1</button>
+                                        <button id="C1" class="btn btn-primary bg-gray-200 border-0">C1</button>
+                                        <button id="D1" class="btn btn-primary bg-gray-200 border-0">D1</button>
+                                        <button id="E1" class="btn btn-primary bg-gray-200 border-0">E1</button>
+                                        <button id="F1" class="btn btn-primary bg-gray-200 border-0">F1</button>
+                                        <button id="G1" class="btn btn-primary bg-gray-200 border-0">G1</button>
+                                        <button id="H1" class="btn btn-primary bg-gray-200 border-0">H1</button>
+                                        <button id="I1" class="btn btn-primary bg-gray-200 border-0">I1</button>
+                                        <button id="J1" class="btn btn-primary bg-gray-200 border-0">J1</button>
                                     </div>
                                 </div>
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <div id="A2" class="btn-set">A2</div>
-                                        <div id="B2" class="btn-set">B2</div>
-                                        <div id="C2" class="btn-set">C2</div>
-                                        <div id="D2" class="btn-set">D2</div>
-                                        <div id="E2" class="btn-set">E2</div>
-                                        <div id="F2" class="btn-set">F2</div>
-                                        <div id="G2" class="btn-set">G2</div>
-                                        <div id="H2" class="btn-set">H2</div>
-                                        <div id="I2" class="btn-set">I2</div>
-                                        <div id="J2" class="btn-set">J2</div>
+                                        <button id="A2" class="btn btn-primary bg-gray-200 border-0">A2</button>
+                                        <button id="B2" class="btn btn-primary bg-gray-200 border-0">B2</button>
+                                        <button id="C2" class="btn btn-primary bg-gray-200 border-0">C2</button>
+                                        <button id="D2" class="btn btn-primary bg-gray-200 border-0">D2</button>
+                                        <button id="E2" class="btn btn-primary bg-gray-200 border-0">E2</button>
+                                        <button id="F2" class="btn btn-primary bg-gray-200 border-0">F2</button>
+                                        <button id="G2" class="btn btn-primary bg-gray-200 border-0">G2</button>
+                                        <button id="H2" class="btn btn-primary bg-gray-200 border-0">H2</button>
+                                        <button id="I2" class="btn btn-primary bg-gray-200 border-0">I2</button>
+                                        <button id="J2" class="btn btn-primary bg-gray-200 border-0">J2</button>
                                     </div>
                                 </div>
                             </div>
@@ -246,30 +246,30 @@
 
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <div id="A3" class="btn-set">A3</div>
-                                        <div id="B3" class="btn-set">B3</div>
-                                        <div id="C3" class="btn-set">C3</div>
-                                        <div id="D3" class="btn-set">D3</div>
-                                        <div id="E3" class="btn-set">E3</div>
-                                        <div id="F3" class="btn-set">F3</div>
-                                        <div id="G3" class="btn-set">G3</div>
-                                        <div id="H3" class="btn-set">H3</div>
-                                        <div id="I3" class="btn-set">I3</div>
-                                        <div id="J3" class="btn-set">J3</div>
+                                        <button id="A3" class="btn btn-primary bg-gray-200 border-0">A3</button>
+                                        <button id="B3" class="btn btn-primary bg-gray-200 border-0">B3</button>
+                                        <button id="C3" class="btn btn-primary bg-gray-200 border-0">C3</button>
+                                        <button id="D3" class="btn btn-primary bg-gray-200 border-0">D3</button>
+                                        <button id="E3" class="btn btn-primary bg-gray-200 border-0">E3</button>
+                                        <button id="F3" class="btn btn-primary bg-gray-200 border-0">F3</button>
+                                        <button id="G3" class="btn btn-primary bg-gray-200 border-0">G3</button>
+                                        <button id="H3" class="btn btn-primary bg-gray-200 border-0">H3</button>
+                                        <button id="I3" class="btn btn-primary bg-gray-200 border-0">I3</button>
+                                        <button id="J3" class="btn btn-primary bg-gray-200 border-0">J3</button>
                                     </div>
                                 </div>
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <div id="A4" class="btn-set">A4</div>
-                                        <div id="B4" class="btn-set">B4</div>
-                                        <div id="C4" class="btn-set">C4</div>
-                                        <div id="D4" class="btn-set">D4</div>
-                                        <div id="E4" class="btn-set">E4</div>
-                                        <div id="F4" class="btn-set">F4</div>
-                                        <div id="G4" class="btn-set">G4</div>
-                                        <div id="H4" class="btn-set">H4</div>
-                                        <div id="I4" class="btn-set">I4</div>
-                                        <div id="J4" class="btn-set">J4</div>
+                                        <button id="A4" class="btn btn-primary bg-gray-200 border-0">A4</button>
+                                        <button id="B4" class="btn btn-primary bg-gray-200 border-0">B4</button>
+                                        <button id="C4" class="btn btn-primary bg-gray-200 border-0">C4</button>
+                                        <button id="D4" class="btn btn-primary bg-gray-200 border-0">D4</button>
+                                        <button id="E4" class="btn btn-primary bg-gray-200 border-0">E4</button>
+                                        <button id="F4" class="btn btn-primary bg-gray-200 border-0">F4</button>
+                                        <button id="G4" class="btn btn-primary bg-gray-200 border-0">G4</button>
+                                        <button id="H4" class="btn btn-primary bg-gray-200 border-0">H4</button>
+                                        <button id="I4" class="btn btn-primary bg-gray-200 border-0">I4</button>
+                                        <button id="J4" class="btn btn-primary bg-gray-200 border-0">J4</button>
                                     </div>
                                 </div>
                             </div>
@@ -286,35 +286,25 @@
                         <!-- total cost -->
                         <div class="bg-[#F7F8F8] rounded-md p-7">
                             <div class="flex justify-between mb-5">
-                                <p>Seat <span>0</span></p>
+                                <p class="text-black font-bold">Seat <span id="seat-count" class="bg-green-400 text-white p-1 rounded-md">0</span></p>
                                 <p>Class</p>
                                 <p>Price</p>
                             </div>
                             <hr>
-                            <div>
-                                <div class="flex justify-between my-2">
-                                    <p>c2</p>
-                                    <p>Economy</p>
-                                    <p>550</p>
-                                </div>
-                                <div class="flex justify-between my-2">
-                                    <p>c2</p>
-                                    <p>Economy</p>
-                                    <p>550</p>
-                                </div>
-                            </div>
+                            <!-- selected seat -->
+                            <ul id="selected-seat-container"></ul>
                             <hr>
                             <div class="flex justify-between mb-5 my-5">
-                                <p>Total Price</p>
-                                <p>BDT <span>1100</span></p>
+                                <p class="text-black font-bold">Total Price</p>
+                                <p class="text-black font-bold">BDT <span id="total-price">0</span></p>
                             </div>
                             <label class="input input-bordered flex items-center gap-2 bg-white">
                                 <input type="text" class="grow " placeholder="Have any copupon?" />
-                                <kbd class="kbd kbd-sm btn-primary p-2">Apply</kbd>
+                                <kbd class="kbd kbd-sm btn-primary2 p-2">Apply</kbd>
                             </label>
                             <div class="flex justify-between my-5">
-                                <p>Grand Price</p>
-                                <p>BDT <span>1100</span></p>
+                                <p class="text-black font-bold">Grand Price</p>
+                                <p class="text-black font-bold">BDT <span id="grand-price">0</span></p>
                             </div>
                         </div>
 
@@ -341,7 +331,7 @@
                                 </svg>
                                 <input type="text" class="grow" placeholder="Email" />
                             </label>
-                            <button class="w-full btn-primary">Next</button>
+                            <button onclick="ticketBuySuccess()" class="w-full btn btn-primary2 border-0">Next</button>
                         </div>
                     </div>
                 </div>
@@ -365,7 +355,7 @@
                 We are working hard to find the best service and deals for you.
                 <span class="text-gray-400">Shortly you will find a confirmation in your email.</span>
             </p>
-            <button class="btn-primary">Continue</button>
+            <button class="btn-primary2">Continue</button>
 
         </div>
 
