Added seat cost

--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                                 <p class="text-black font-bold">BDT <span id="total-price">0</span></p>
                             </div>
                             <label class="input input-bordered flex items-center gap-2 bg-white">
-                                <input type="text" class="grow " placeholder="Have any copupon?" />
-                                <kbd class="kbd kbd-sm btn-primary2 p-2">Apply</kbd>
+                                <input id="input-coupon" type="text" class="grow " placeholder="Have any coupon ?" />
+                                <kbd onclick="applyCoupon()" class="kbd kbd-sm btn-primary2 p-2">Apply</kbd>
                             </label>
                             <div class="flex justify-between my-5">
                                 <p class="text-black font-bold">Grand Price</p>
