Added Coupon discound function

--- a/index.html
+++ b/index.html
@@ -298,9 +298,10 @@
                                 <p class="text-black font-bold">Total Price</p>
                                 <p class="text-black font-bold">BDT <span id="total-price">0</span></p>
                             </div>
+                            <!-- coupon -->
                             <label class="input input-bordered flex items-center gap-2 bg-white">
                                 <input id="input-coupon" type="text" class="grow " placeholder="Have any coupon ?" />
-                                <kbd onclick="applyCoupon()" class="kbd kbd-sm btn-primary2 p-2">Apply</kbd>
+                                <kbd onclick="grandPrice()" class="kbd kbd-sm btn-primary2 p-2">Apply</kbd>
                             </label>
                             <div class="flex justify-between my-5">
                                 <p class="text-black font-bold">Grand Price</p>
