--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <div class="relative header-title text-center">
                 <h2 class="font-extrabold text-5xl text-center flex flex-col pt-20">End-to-End Travel with <span
                         class="text-[#1DD100] py-5">G Paribahan</span></h2>
-                <p class="w-2/6 mx-auto mb-5">Life is similar to a bus ride. The journey begins when we board the bus. We
+                <p class="w-2/6 mx-auto mb-5">Life is similar to a bus ride. The journey begins when we board the bus.
+                    We
                     meet people along our way
                     of which some are strangers, some friends and some strangers yet to be friends. There are stops at
                     intervals and people board in.</p>
@@ -124,7 +125,8 @@
             </section>
 
             <!-- bus section -->
-            <section id="bus-section" class="my-7 lg:my-20 text-center bg-[#F7F8F8] border-green-600 rounded-3xl border-2 ">
+            <section id="bus-section"
+                class="my-7 lg:my-20 text-center bg-[#F7F8F8] border-green-600 rounded-3xl border-2 ">
                 <h3 class="text-2xl font-bold text-center my-7 text-black">G Paribahan</h3>
                 <p class="w-2/6 mx-auto mb-5">Life is similar to a bus ride. The journey begins when we board the bus.
                     We
@@ -214,30 +216,30 @@
                                 </div>
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <button onclick="toggleSelection(this)" id="A1" class="btn btn-primary bg-gray-200 border-0">A1</button>
-                                        <button onclick="toggleSelection(this)" id="B1" class="btn btn-primary bg-gray-200 border-0">B1</button>
-                                        <button onclick="toggleSelection(this)" id="C1" class="btn btn-primary bg-gray-200 border-0">C1</button>
-                                        <button onclick="toggleSelection(this)" id="D1" class="btn btn-primary bg-gray-200 border-0">D1</button>
-                                        <button onclick="toggleSelection(this)" id="E1" class="btn btn-primary bg-gray-200 border-0">E1</button>
-                                        <button onclick="toggleSelection(this)" id="F1" class="btn btn-primary bg-gray-200 border-0">F1</button>
-                                        <button onclick="toggleSelection(this)" id="G1" class="btn btn-primary bg-gray-200 border-0">G1</button>
-                                        <button onclick="toggleSelection(this)" id="H1" class="btn btn-primary bg-gray-200 border-0">H1</button>
-                                        <button onclick="toggleSelection(this)" id="I1" class="btn btn-primary bg-gray-200 border-0">I1</button>
-                                        <button onclick="toggleSelection(this)" id="J1" class="btn btn-primary bg-gray-200 border-0">J1</button>
+                                        <button id="A1" class="btn btn-primary bg-gray-200 border-0">A1</button>
+                                        <button id="B1" class="btn btn-primary bg-gray-200 border-0">B1</button>
+                                        <button id="C1" class="btn btn-primary bg-gray-200 border-0">C1</button>
+                                        <button id="D1" class="btn btn-primary bg-gray-200 border-0">D1</button>
+                                        <button id="E1" class="btn btn-primary bg-gray-200 border-0">E1</button>
+                                        <button id="F1" class="btn btn-primary bg-gray-200 border-0">F1</button>
+                                        <button id="G1" class="btn btn-primary bg-gray-200 border-0">G1</button>
+                                        <button id="H1" class="btn btn-primary bg-gray-200 border-0">H1</button>
+                                        <button id="I1" class="btn btn-primary bg-gray-200 border-0">I1</button>
+                                        <button id="J1" class="btn btn-primary bg-gray-200 border-0">J1</button>
                                     </div>
                                 </div>
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <button onclick="toggleSelection(this)" id="A2" class="btn btn-primary bg-gray-200 border-0">A2</button>
-                                        <button onclick="toggleSelection(this)" id="B2" class="btn btn-primary bg-gray-200 border-0">B2</button>
-                                        <button onclick="toggleSelection(this)" id="C2" class="btn btn-primary bg-gray-200 border-0">C2</button>
-                                        <button onclick="toggleSelection(this)" id="D2" class="btn btn-primary bg-gray-200 border-0">D2</button>
-                                        <button onclick="toggleSelection(this)" id="E2" class="btn btn-primary bg-gray-200 border-0">E2</button>
-                                        <button onclick="toggleSelection(this)" id="F2" class="btn btn-primary bg-gray-200 border-0">F2</button>
-                                        <button onclick="toggleSelection(this)" id="G2" class="btn btn-primary bg-gray-200 border-0">G2</button>
-                                        <button onclick="toggleSelection(this)" id="H2" class="btn btn-primary bg-gray-200 border-0">H2</button>
-                                        <button onclick="toggleSelection(this)" id="I2" class="btn btn-primary bg-gray-200 border-0">I2</button>
-                                        <button onclick="toggleSelection(this)" id="J2" class="btn btn-primary bg-gray-200 border-0">J2</button>
+                                        <button id="A2" class="btn btn-primary bg-gray-200 border-0">A2</button>
+                                        <button id="B2" class="btn btn-primary bg-gray-200 border-0">B2</button>
+                                        <button id="C2" class="btn btn-primary bg-gray-200 border-0">C2</button>
+                                        <button id="D2" class="btn btn-primary bg-gray-200 border-0">D2</button>
+                                        <button id="E2" class="btn btn-primary bg-gray-200 border-0">E2</button>
+                                        <button id="F2" class="btn btn-primary bg-gray-200 border-0">F2</button>
+                                        <button id="G2" class="btn btn-primary bg-gray-200 border-0">G2</button>
+                                        <button id="H2" class="btn btn-primary bg-gray-200 border-0">H2</button>
+                                        <button id="I2" class="btn btn-primary bg-gray-200 border-0">I2</button>
+                                        <button id="J2" class="btn btn-primary bg-gray-200 border-0">J2</button>
                                     </div>
                                 </div>
                             </div>
@@ -246,30 +248,30 @@
 
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <button onclick="toggleSelection(this)" id="A3" class="btn btn-primary bg-gray-200 border-0">A3</button>
-                                        <button onclick="toggleSelection(this)" id="B3" class="btn btn-primary bg-gray-200 border-0">B3</button>
-                                        <button onclick="toggleSelection(this)" id="C3" class="btn btn-primary bg-gray-200 border-0">C3</button>
-                                        <button onclick="toggleSelection(this)" id="D3" class="btn btn-primary bg-gray-200 border-0">D3</button>
-                                        <button onclick="toggleSelection(this)" id="E3" class="btn btn-primary bg-gray-200 border-0">E3</button>
-                                        <button onclick="toggleSelection(this)" id="F3" class="btn btn-primary bg-gray-200 border-0">F3</button>
-                                        <button onclick="toggleSelection(this)" id="G3" class="btn btn-primary bg-gray-200 border-0">G3</button>
-                                        <button onclick="toggleSelection(this)" id="H3" class="btn btn-primary bg-gray-200 border-0">H3</button>
-                                        <button onclick="toggleSelection(this)" id="I3" class="btn btn-primary bg-gray-200 border-0">I3</button>
-                                        <button onclick="toggleSelection(this)" id="J3" class="btn btn-primary bg-gray-200 border-0">J3</button>
+                                        <button id="B3" class="btn btn-primary bg-gray-200 border-0">B3</button>
+                                        <button id="A3" class="btn btn-primary bg-gray-200 border-0">A3</button>
+                                        <button id="C3" class="btn btn-primary bg-gray-200 border-0">C3</button>
+                                        <button id="D3" class="btn btn-primary bg-gray-200 border-0">D3</button>
+                                        <button id="E3" class="btn btn-primary bg-gray-200 border-0">E3</button>
+                                        <button id="F3" class="btn btn-primary bg-gray-200 border-0">F3</button>
+                                        <button id="G3" class="btn btn-primary bg-gray-200 border-0">G3</button>
+                                        <button id="H3" class="btn btn-primary bg-gray-200 border-0">H3</button>
+                                        <button id="I3" class="btn btn-primary bg-gray-200 border-0">I3</button>
+                                        <button id="J3" class="btn btn-primary bg-gray-200 border-0">J3</button>
                                     </div>
                                 </div>
                                 <div>
                                     <div class="grid grid-rows-10 grid-flow-col gap-4">
-                                        <button onclick="toggleSelection(this)" id="A4" class="btn btn-primary bg-gray-200 border-0">A4</button>
-                                        <button onclick="toggleSelection(this)" id="B4" class="btn btn-primary bg-gray-200 border-0">B4</button>
-                                        <button onclick="toggleSelection(this)" id="C4" class="btn btn-primary bg-gray-200 border-0">C4</button>
-                                        <button onclick="toggleSelection(this)" id="D4" class="btn btn-primary bg-gray-200 border-0">D4</button>
-                                        <button onclick="toggleSelection(this)" id="E4" class="btn btn-primary bg-gray-200 border-0">E4</button>
-                                        <button onclick="toggleSelection(this)" id="F4" class="btn btn-primary bg-gray-200 border-0">F4</button>
-                                        <button onclick="toggleSelection(this)" id="G4" class="btn btn-primary bg-gray-200 border-0">G4</button>
-                                        <button onclick="toggleSelection(this)" id="H4" class="btn btn-primary bg-gray-200 border-0">H4</button>
-                                        <button onclick="toggleSelection(this)" id="I4" class="btn btn-primary bg-gray-200 border-0">I4</button>
-                                        <button onclick="toggleSelection(this)" id="J4" class="btn btn-primary bg-gray-200 border-0">J4</button>
+                                        <button id="A4" class="btn btn-primary bg-gray-200 border-0">A4</button>
+                                        <button id="B4" class="btn btn-primary bg-gray-200 border-0">B4</button>
+                                        <button id="C4" class="btn btn-primary bg-gray-200 border-0">C4</button>
+                                        <button id="D4" class="btn btn-primary bg-gray-200 border-0">D4</button>
+                                        <button id="E4" class="btn btn-primary bg-gray-200 border-0">E4</button>
+                                        <button id="F4" class="btn btn-primary bg-gray-200 border-0">F4</button>
+                                        <button id="G4" class="btn btn-primary bg-gray-200 border-0">G4</button>
+                                        <button id="H4" class="btn btn-primary bg-gray-200 border-0">H4</button>
+                                        <button id="I4" class="btn btn-primary bg-gray-200 border-0">I4</button>
+                                        <button id="J4" class="btn btn-primary bg-gray-200 border-0">J4</button>
                                     </div>
                                 </div>
                             </div>
@@ -286,7 +288,8 @@
                         <!-- total cost -->
                         <div class="bg-[#F7F8F8] rounded-md p-7">
                             <div class="flex justify-between mb-5">
-                                <p class="text-black font-bold">Seat <span id="seat-count" class="bg-green-400 text-white p-1 rounded-md">0</span></p>
+                                <p class="text-black font-bold">Seat <span id="seat-count"
+                                        class="bg-green-400 text-white p-1 rounded-md">0</span></p>
                                 <p>Class</p>
                                 <p>Price</p>
                             </div>
