--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 We are working hard to find the best service and deals for you.
                 <span class="text-gray-400">Shortly you will find a confirmation in your email.</span>
             </p>
-            <button class="btn-primary2">Continue</button>
+            <button onclick="homePage()" class="btn-primary2">Continue</button>
 
         </div>
 
