update input field

--- a/index.html
+++ b/index.html
@@ -314,15 +314,15 @@
 
                         <!-- account section -->
                         <div class="my-5  p-5">
-                            <p class="my-5">Passenger Name</p>
+                            <p class="my-5">Passenger Name*</p>
                             <label class="input input-bordered flex items-center gap-2 bg-white my-5">
-                                Name
-                                <input type="text" class="grow" placeholder="Daisy" />
+                                
+                                <input type="text" class="grow required:" placeholder="Enter your name" />
                             </label>
-                            <p class="my-5">Phone Number</p>
+                            <p class="my-5">Phone Number*</p>
                             <label class="input input-bordered flex items-center gap-2 bg-white my-5">
-                                Name
-                                <input type="text" class="grow" placeholder="Daisy" />
+                               
+                                <input type="number" class="grow required:" placeholder="Enter your phone number" />
                             </label>
                             <p class="my-5">Email ID</p>
                             <label class="input input-bordered flex items-center gap-2 bg-white my-5">
