--- a/index.html
+++ b/index.html
@@ -403,13 +403,13 @@
     </section>
 
     <!-- Ticket buying successful section -->
-    <section id="buying-result" class="lg:container lg:mx-auto bg-gray-300 w-screen h-screen hidden">
-        <div class="bg-white rounded-lg p-60  ">
-            <img src="images/success.png" alt="">
-            <h3 class="text-green-400">success</h3>
-            <p class="text-black">Thank you for Booking Our Bus Seats.
-                We are working hard to find the best service and deals for you.
-                <span class="text-gray-400">Shortly you will find a confirmation in your email.</span>
+    <section id="buying-result" class="lg:container lg:mx-auto bg-gray-300 w-screen h-screen text-center hidden">
+        <div class="bg-white rounded-lg w-1/2 mx-auto p-16">
+            <img class="items-center justify-center mx-auto" src="images/success.png" alt="">
+            <h3 class="text-green-400 font-bold my-4">success</h3>
+            <p class="text-black ">Thank you for Booking Our Bus Seats. <br>
+                We are working hard to find the best service and deals for you. <br>
+                <span class="text-gray-400 my-2">Shortly you will find a confirmation in your email.</span>
             </p>
             <button onclick="homePage()" class="btn-primary2">Continue</button>
 
