--- a/index.html
+++ b/index.html
@@ -119,24 +119,26 @@
             <section class="mt-7 lg:mt-32 text-center">
                 <h3 class="text-2xl font-bold text-center my-7">Best offers for you</h3>
                 <div class="flex-1 lg:flex justify-center gap-4 ">
-                    <div class="flex p-8 mx-auto bg-[#FFBF0F] rounded-lg shadow-lg items-center gap-10 w-3/4">
+                    <div class="flex p-8 mx-auto bg-[#FFBF0F] rounded-lg shadow-lg items-center gap-10 w-3/4 h-56">
                         <div class=" justify-between items-center mb-4 flex-1">
                             <div class="text-black font-bold text-3xl">15% OFF</div>
                             <div class="text-black text-lg">on your next purchase</div>
                             <div class="text-gray-500 text-lg">use by January 2024</div>
                         </div>
+                        <img src="images/cupon-devider.png" alt="">
                         <div class="border-gray-200 py-4 text-center">
                             <h3 class="text-black font-bold text-2xl">NEW15</h3>
                             <p>Coupon Code</p>
                         </div>
                     </div>
 
-                    <div class="flex p-8 mx-auto bg-[#F78C9C] rounded-lg shadow-lg items-center gap-10 w-3/4">
+                    <div class="flex p-8 mx-auto bg-[#F78C9C] rounded-lg shadow-lg items-center gap-10 w-3/4 h-56">
                         <div class=" justify-between items-center mb-4 flex-1">
                             <div class="text-black font-bold text-3xl">20% OFF</div>
                             <div class="text-black text-lg">on your next purchase</div>
                             <div class="text-gray-500 text-lg">use by January 2024</div>
                         </div>
+                        <img src="images/cupon-devider.png" alt="">
                         <div class="border-gray-200 py-4 text-center">
                             <h3 class="text-black font-bold text-2xl">Couple 20</h3>
                             <p>Coupon Code</p>
