--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <section id="bus-section"
                 class="mt-7 lg:mt-20 text-center bg-[#F7F8F8] border-t-green-600 rounded-t-3xl border-4 ">
                 <h3 class="text-2xl font-bold text-center my-7 text-black">G Paribahan</h3>
-                <p class="w-2/6 mx-auto mb-5">Life is similar to a bus ride. The journey begins when we board the bus.
+                <p class="w-3/6 mx-auto mb-5">Life is similar to a bus ride. The journey begins when we board the bus.
                     We
                     meet people along our way
                     of which some are strangers, some friends and some strangers yet to be friends. There are stops at
@@ -197,6 +197,7 @@
 
                         </div>
                     </div>
+                    <img src="images/info-devider.png" alt="">
                     <div class="items-center justify-center w-1/4 my-auto">
                         <img class="mx-auto" src="images/fare.png" alt="">
                         <p class="text-black font-extrabold text-2xl">550 Taka</p>
