dynamic avilable seat

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             </div>
                             <div class="bg-green-300 items-center flex gap-1 p-2 rounded-md">
                                 <img src="images/seat-green.png" alt="">
-                                <p class="text-green-500 "><span class="mx-1">40</span>Seat left</p>
+                                <p class="text-green-500 "><span id="total-seat" class="mx-1">40</span>Seat left</p>
                             </div>
                         </div>
                         <div class="flex justify-between items-center w-full gap-2 p-4">
